    addons which use Python support both 2 & 3.  (Closes: #729924)
  * Add mips64el as a recognized architecture in debcontrol files.  Thanks to
    Reiner Herrmann for the patch.  (Closes: #830545)
  * Update supported Ubuntu releases in debsources files.
  * Remove vim-gnome (which uses deprecated gnome2 libraries) in favor of
    vim-gtk3.  (Closes: #820239)

 -- James McCoy <jamessan@debian.org>  Sun, 04 Sep 2016 18:51:31 -0400

vim (2:7.4.1829-1) unstable; urgency=medium

  * Merge upstream tag v7.4.1829
    + 7.4.1713: Force use of X11 backend under Wayland.  (Closes: #819954)
    + 7.4.1802: Improve handling of long lines in quickfix lists.  (Closes:
      #815976)
    + LogiPat plugin's :ELP command renamed to :LPE, so it doesn't shadow :E.
      (Closes: #796075)

 -- James McCoy <jamessan@debian.org>  Mon, 09 May 2016 23:06:14 -0400

vim (2:7.4.1689-3) unstable; urgency=medium

  * helpztags: Fix regression in previous upload where the doc file isn't
    opened, so no tags file is generated.  (Closes: #820313)

 -- James McCoy <jamessan@debian.org>  Thu, 07 Apr 2016 22:37:20 -0400

vim (2:7.4.1689-2) unstable; urgency=medium

  * Stop installing a dangling symlink at
    /usr/share/vim/addons/doc/matchit.txt.  (Closes: #819796)
  * Lintian:
    + Provide more details in vim-doc's long description.  Thanks to Elimar
      Riesebieter for the patch.  (Closes: #819733)
  * helpztags:
    + Don't try to read a file if it can't be opened.  (Closes: #819764)
    + Don't error if the specified directory doesn't exist.  (Closes: #819809)
  * Generate vim-policy in a consistent locale.

 -- James McCoy <jamessan@debian.org>  Sun, 03 Apr 2016 09:25:18 -0400

vim (2:7.4.1689-1) unstable; urgency=medium

  * Merge upstream tag v7.4.1689.
    + Highlighted changes:
      - 7.4.1142: “:syn iskeyword” command to define the set of keyword
        characters for syntax highlighting, rather than changing the buffer's
        'iskeyword' option.