@@ -272,6 +272,7 @@ build-stamp-%: configure-stamp-%
 	dh_prep -p $*
 	@echo "*** DEBIAN *** BUILDING VARIANT $*"
 	$(MAKE) -C src/$(SHADOWDIR)
+	[ $(MAKETEST) != "yes" ] || $(MAKE) -j1 -C src/$(SHADOWDIR) test
 	touch $@
 
 install: $(foreach v,$(VARIANTS),install-stamp-$(v))
@@ -308,17 +309,6 @@ install-stamp-vim-basic: build-stamp-vim-basic $(DOT_IN_DEPS)
 	    install-languages \
 	    install-icons
 	
-# Tests need to be run in series, otherwise the terminal requests may not see
-# proper responses.
-# Prefer the vim-nox binary if it exists since that will also test the
-# language interfaces.
-	if [ $(MAKETEST) = "yes" ]; then \
-	  if [ -e src/vim-nox/vim ]; then \
-	    $(MAKE) -j1 -C src/vim-nox test; \
-	  else \
-	    $(MAKE) -j1 -C src/vim-basic test; \
-	  fi; \
-	fi
 	# installvimbin installs the vim binary under debian/tmp but we install
 	# it into the vim package from src/.  Need to rm it from debian/tmp so
 	# that dh_install doesn't fail
