@@ -20,6 +20,8 @@ vim (2:7.4.2330-1) UNRELEASED; urgency=medium
   * Update supported Ubuntu releases in debsources files.
   * Remove vim-gnome (which uses deprecated gnome2 libraries) in favor of
     vim-gtk3.  (Closes: #820239)
+  * Run tests during build targets to avoid test failures related to running
+    as (fake)root.
 
  -- James McCoy <jamessan@debian.org>  Sun, 04 Sep 2016 18:51:31 -0400
 
